src/Base/main/default/objects/Pricebook2/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <description>The Version of the Pricebook</description>
    <label>Version</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>