src/Base/main/default/objects/Pricebook2/recordTypes/Factory.recordType-meta.xml
<RecordType>
    <fullName>Factory</fullName>
    <active>true</active>
    <description>Price book used for Factory Store Pricing</description>
    <label>Factory</label>
</RecordType>